# func-programming

./: .gitignore
lab1/: lab1.cabal
lab1/app/: Main.hs
lab1Postgres/app/: Main.hs
lab2/: lab2.cabal
lab2/app/: Main.hs
tasks/genetic-algo/: genetic-algo.cabal
tasks/genetic-algo-task3/: CHANGELOG.md
tasks/genetic-algo/app/: Main.hs
tasks/gif-task8/: CHANGELOG.md  gif-task8.cabal
tasks/gif-task8/app/: Main.hs
tasks/graph-task4/: CHANGELOG.md  graph-task4.cabal
tasks/graph-task4/app/: Main.hs
tasks/knight-tour/: CHANGELOG.md
tasks/knight-tour-task1/: knight-tour.cabal.save0
tasks/neuralnetwork-task2/: CHANGELOG.md  neuralnetwork-task2.cabal
tasks/neuralnetwork-task2/app/: Main.hs
tasks/opengl-task7/: CHANGELOG.md  opengl-task7.cabal
tasks/opengl-task7/app/: Main.hs
tasks/task5-chat/: CHANGELOG.md  task5-chat.cabal
tasks/task5-chat/app/: startClient.hs  startServer.hs
tasks/xml-task6/: CHANGELOG.md  xml-task6.cabal
tasks/xml-task6/app/: Main.hs
